# skin-disease-clasifier-project

./: .dockerignore  .gitignore  dockerfile  pyproject.toml  requirements.txt
frontend/: streamlit.py
src/api/: main.py  model_loader.py  predictor.py  preprocess_image.py
src/exception/: __init__.py
src/logger/: __init__.py
